Added planet collision box

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,3 +57,10 @@ AppliedDefaultGraphicsPerformance=Maximum
 GameDefaultMap=/Game/maps/TitleScreen
 EditorStartupMap=/Game/maps/world
 
+[Oculus.Settings]
+; In meters, not Unreal Units (cm)
+; Recommended for true first person viewpoint
+; since you are simulating the head.
+;HeadModel_v2=(X=0.0,Y=0,Z=0.0)
+; Default values
+HeadModel_v2=(X=0.12,Y=0,Z=0.17)
