--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -53,10 +53,6 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
-[/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/maps/TitleScreen
-EditorStartupMap=/Game/maps/world
-
 [Oculus.Settings]
 ; In meters, not Unreal Units (cm)
 ; Recommended for true first person viewpoint
@@ -64,3 +60,18 @@ EditorStartupMap=/Game/maps/world
 ;HeadModel_v2=(X=0.0,Y=0,Z=0.0)
 ; Default values
 HeadModel_v2=(X=0.12,Y=0,Z=0.17)
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/maps/world
+LocalMapOptions=
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/maps/TitleScreen
+ServerDefaultMap=/Engine/Maps/Entry
+GlobalDefaultGameMode=/Script/Firefly.FireflyGameMode
+GlobalDefaultServerGameMode=None
+
+
