--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,13 +54,16 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/maps/TitleScreen
-EditorStartupMap=/Game/maps/world
+EditorStartupMap=/Engine/Maps/Templates/Template_Default
+LocalMapOptions=
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Engine/Maps/Entry
+ServerDefaultMap=/Engine/Maps/Entry
+GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultServerGameMode=None
 
-[Oculus.Settings]
-; In meters, not Unreal Units (cm)
-; Recommended for true first person viewpoint
-; since you are simulating the head.
-;HeadModel_v2=(X=0.0,Y=0,Z=0.0)
-; Default values
-HeadModel_v2=(X=0.12,Y=0,Z=0.17)
+
