Changed DefaultInput and Engine

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -53,4 +53,7 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+GameDefaultMap=/Game/maps/World_Big
+EditorStartupMap=/Game/maps/World_Big
 
